[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-message-filter"
version = "0.1.0"
description = "Filter and slice LLM message history by role, content, or index"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_message_filter"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
